Removing the fixed width and the buttons container width/gap

--- a/doin-frontend/src/app/shared/friend-list/friend-list.component.css
+++ b/doin-frontend/src/app/shared/friend-list/friend-list.component.css
@@ -3,7 +3,6 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
-  width: 350px;
 }
 
 .avatar {
@@ -26,10 +25,8 @@
 }
 
 .buttons {
-  width: 50%;
   display: flex;
   flex-direction: row;
-  gap: 0px;
 }
 
 .remove-button, .add-button {
